--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+:root{
+  --bg-color:#2B63D9;
+  --link-color:#A5ACBA;
+  --email-color:#B1CCFB;
+}
 .sidebar-post-img {
   width: 11.75rem;
   height: auto;
@@ -11,16 +16,25 @@
   border-radius: 0.375rem;
 }
 
-.card-img-top {
-  object-fit: cover;
-  height: 200px;
-}
+
 
 .section-title {
   padding-top: 2rem;
   font-weight: bold;
 }
+.carousel {
+  max-width: 60%; 
+  margin: 0 auto; 
+  margin-bottom: 4rem;
+}
 
+.carousel-item img {
+  width: 90%;
+  object-fit: cover; 
+}
+#carouselMain .active {
+  background-color: #000;
+}
 .blog-cards-container {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -31,10 +45,10 @@
 }
 .custom-container{
   max-width: 40rem;
-  transform:translate(63%,0%)
+  transform:translate(60%,0%)
 }         
 .bg{
-  background-color: #2B63D9;
+  background-color: var(--bg-color);
 }        
 .enterEmail .first{
   font-size: 32px;
@@ -45,20 +59,20 @@
   width: 40rem;
   line-height: 24px;
   font-weight: 400;
-  color: #B1CCFB;
+  color: var(--email-color);
 }
 .form-control{
   width: 23rem;
 }
 .custom{
-  background-color: #2B63D9;
+  background-color: var(--bg-color);
 }
 .welcome{
   width: 60rem;
   transform: translate(-10%,0%);
 }
 .btn.bg-white.btn-sm{
-  color: #2B63D9;
+  color: var(--bg-color);
 }
 .footer p{
   font-size: 1rem;
@@ -66,11 +80,11 @@
   padding-bottom: 12px;
 }
 .footer ul li a {
-  color: #A5ACBA !important;
+  color: var(--link-color) !important;
   font-size: 1rem;
 }
 .footer ul li{
-  padding-top: 12px;
+  padding-top: 0.75rem;
 }
 @media (max-width: 768px) {
     .custom-container {
