--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,41 @@
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/fonts/Inter-Regular.woff2') format('woff2'),
+       url('./assets/fonts/Inter-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('./assets/fonts/Inter-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+body {
+  font-family: 'Inter', sans-serif;
+}
 :root{
   --bg-color:#2B63D9;
   --link-color:#A5ACBA;
   --email-color:#B1CCFB;
+  --text-color:#272D37;
+  --btn-color:#437EF7;
+}
+nav{
+  margin-bottom: 5rem;
+}
+nav img{
+  width: 10rem;
+}
+nav a{
+  color: var(--text-color);
+} 
+.btn-primary{
+  background-color: var(--btn-color);
+}
+h1,h3{
+  color: var(--text-color);
 }
 .sidebar-post-img {
   width: 11.75rem;
@@ -16,24 +50,38 @@
   border-radius: 0.375rem;
 }
 
-
+.px-6{
+  padding-left: 5.0625rem;
+  padding-right: 5.0625rem;
+}
+.py-6{
+  padding-bottom: 1.25rem;
+  padding-top: 1.25rem;
+}
+.mb-6{
+  margin-bottom: 5.875rem;
+}
+.carousel {
+  height: 31.25rem;
+  margin-top: -80px;
+}
 
 .section-title {
   padding-top: 2rem;
   font-weight: bold;
 }
-.carousel {
-  max-width: 60%; 
-  margin: 0 auto; 
-  margin-bottom: 4rem;
+.card-img-top {
+  object-fit: cover;
+  height: 200px;
 }
 
-.carousel-item img {
-  width: 90%;
-  object-fit: cover; 
+.section-title {
+  padding-top: 2rem;
 }
-#carouselMain .active {
-  background-color: #000;
+
+.blog-cards-container {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .blog-cards-container {
   padding-left: 1rem;
@@ -42,14 +90,20 @@
 }
 .hype{
   font-size: 3.25rem;
+  max-width: 37rem;
+  align-items: center;
 }
-.custom-container{
-  max-width: 40rem;
-  transform:translate(60%,0%)
-}         
+.Subscribe p{
+  color: #B1CCFB;
+  font-weight: 400;
+}
 .bg{
   background-color: var(--bg-color);
-}        
+}       
+.post {
+  width:100px; 
+  height:auto;
+} 
 .enterEmail .first{
   font-size: 32px;
   width: 40rem;
@@ -86,13 +140,53 @@
 .footer ul li{
   padding-top: 0.75rem;
 }
+footer input[type="email"] {
+  background-color: #2C3444;
+}
+footer input[type="email"]::placeholder {
+  color: var(--link-color);
+}
+.copy-right{
+  border-top: 1px solid #2E3545; 
+}
+.blog-title {
+  position: relative;
+  /* display: inline-block; */
+  padding-bottom: 1rem;
+}
+
+.blog-title::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+  width: 8.625rem;        
+  height: 5px;        
+  background-color: #D9D9D9; 
+  
+}
 @media (max-width: 768px) {
     .custom-container {
       max-width: 100%;
       transform: none;
       padding: 0 1rem;
     }
-
+.responsive{
+  display: flex;
+  flex-direction: column-reverse;
+}
+.responsive form{
+  display: flex;
+  flex-direction: column;
+}
+.responsive form input{
+  width: 100%;
+  margin-bottom: 10px;
+}
+.carousel-inner button{
+  width: 100%;
+}
     .hype {
       font-size: 2rem;
     }
