--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Regular.woff2') format('woff2'),
-       url('./assets/fonts/Inter-Regular.woff') format('woff');
+  src: url('../fonts/Inter-Regular.woff2') format('woff2'),
+       url('../fonts/Inter-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Bold.woff2') format('woff2');
+  src: url('../fonts/Inter-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
@@ -16,11 +16,42 @@ body {
   font-family: 'Inter', sans-serif;
 }
 :root{
-  --link-color:#A5ACBA;
-  --email-color:#B1CCFB;
-  --text-color:#272D37;
-  --text-description:#5F6D7E;
+  --color-gray-300:#A5ACBA;
+  --color-gray-100:#272D37;
+  --color-gray-400:#2C3444;
+  --color-gray-200:#5F6D7E;
+  --color-blue-100:#437EF7;
+  --color-blue-200:#2B63D9;
+  --color-blue-300:#B1CCFB;
+}
 
+.text-color-blue-100{
+  color: var(--color-blue-100);
+}
+.text-color-blue-200{
+  color: var(--color-blue-200);
+}
+.text-color-blue-300{
+  color: var(--color-blue-300);
+}
+.text-color-gray-100{
+  color: var(--color-gray-100);
+}
+.text-color-gray-200{
+  color: var(--color-gray-200);
+}
+.text-color-gray-300{
+  color: var(--color-gray-300);
+}
+
+.bg-color-blue-100{
+  background-color: var(--color-blue-100);
+}
+.bg-color-gray-400{
+  background-color: var(--color-gray-400);
+}
+.bg-color-blue-200{
+  background-color: var(--color-blue-200);
 }
 nav{
   margin-bottom: 5rem;
@@ -30,12 +61,7 @@ nav{
   border: none !important;         
   box-shadow: none !important;     
 }
-.bg-primary{
-  background-color:#2B63D9 !important ;
-}
-.btn-primary{
-  background-color: #437EF7 !important;
-}
+
 .gx-7{
   flex-wrap: nowrap;
   column-gap: 7.5rem;
@@ -43,19 +69,25 @@ nav{
 nav img{
   width: 10rem;
 }
+
+
+.btn-primary.btn-custom {
+  background-color: #0d6efd;
+  border: none;
+}
+
+
 .navbar-brand {
   margin-right: 4rem; 
 }
-.bs-navbar-active-color,nav a {
+.nav-link {
   color: #272D37;
 }
 
 .navbar-nav .nav-item {
   margin-right: 2rem; 
 }
-.btn-primary{
-  background-color: var(--btn-color);
-}
+
 @media (min-width: 768px) and (max-width: 991.98px) {
   .navbar-collapse {
     flex-direction: column;
@@ -102,6 +134,18 @@ h1,h3{
 .py-6{
   padding-bottom: 1.25rem;
   padding-top: 1.25rem;
+}
+.py-7{
+  padding-bottom: 5.75rem;
+  padding-top: 5rem;
+}
+.py-8{
+  padding-bottom: 4rem;
+  padding-top: 4rem;
+}
+.py-9{
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
 }
 .mb-6{
   margin-bottom: 5.875rem;
@@ -158,10 +202,7 @@ h1,h3{
   font-size: 0.875rem;
 }
 /* sbscribe start */
-.Subscribe p{
-  color: #B1CCFB;
-  font-weight: 400;
-}
+
 .post {
   width:100px; 
   height:auto;
@@ -170,17 +211,7 @@ h1,h3{
   font-size: 32px;
   width: 40rem;
 }
-.Subscribe p {
-  color: #B1CCFB;
-  font-weight: 400;
-}
-.Subscribe h2{
-  width: 41rem;
-  font-size: 2rem;
-}
-.subscribe-description {
-  color: var(--email-color);
-}
+
 
 .newsletter-form {
   display: flex;
@@ -198,11 +229,11 @@ h1,h3{
   height: 100%;
 }
 
-.submit-btn {
+/* .submit-btn {
   border-radius: 0 6px 6px 0;
   padding: 0 1.25rem;
   height: 100%;
-}
+} */
 @media (min-width: 768px) and (max-width: 1399px){
   .Subscribe .row {
     flex-direction: column;
@@ -297,29 +328,31 @@ h1,h3{
   }
 }
 
-
-.main-post-img {
+.main-post picture{
+  height: 13.125rem;
+}
+/* .main-post-img {
   height: 100%;
   width: 100%;
   object-fit: cover;
   border-radius: 6px;
+} */
+.side-posts picture{
+  height: 7.375rem;
 }
-
-.side-post-img {
+/* .side-post-img {
   width: 188px;
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
-}
+} */
 
 .small-post {
   width: 100%;
   max-width: 588px;
 }
 
-.gx-5 {
-  --bs-gutter-x: 2.5rem;
-}
+
 
 .gap-5 {
   gap: 2rem !important;
@@ -327,12 +360,10 @@ h1,h3{
 
 .post-title {
   font-size: 1.375rem;
-  color: var(--text-color);
 }
 
 .post-description {
   font-size: 1rem;
-  color: var(--text-description);
 }
 @media (min-width: 768px) and (max-width: 991.98px) {
   .responsive{
@@ -359,7 +390,7 @@ h1,h3{
   width: 100%;
 }
 
-.footer-form .email-input {
+/* footer .email-input {
   background-color: #2C3444;
   color: var(--link-color);
   border: none;
@@ -368,13 +399,11 @@ h1,h3{
   height: 2.875rem;
   font-size: 0.9rem;
   flex: 1;
-  width: 13.8125rem;
-}
-.small {
-  color: var(--link-color);
-}
-.footer-form .email-input::placeholder {
-  color: var(--link-color);
+  width: 13.8125rem; */
+/* } */
+
+footer .email-input::placeholder {
+  color: var(--color-gray-300);
 }
 .footer-links-area {
   padding-left: 0;
@@ -473,18 +502,18 @@ h1,h3{
   .footer-form .email-input {
     flex: 1;
     border-radius: 6px 0 0 6px;
-    height: 2.875rem;
-    padding: 0 1rem;
+    /* height: 2.875rem; */
+    /* padding: 0 1rem; */
     font-size: 0.9rem;
   }
 
-  .footer-form .submit-btn {
+  /* .footer-form .submit-btn {
     border-radius: 0 6px 6px 0;
     height: 2.875rem;
     padding: 0 1.25rem;
     font-size: 0.9rem;
     white-space: nowrap;
-  }
+  } */
 
   .footer-links-area {
     display: flex;
@@ -500,13 +529,13 @@ h1,h3{
 }
 /* footer end */
 
-.submit-btn {
+/* .submit-btn {
   height: 46px;
   border-radius: 0 6px 6px 0;
   padding: 0 1.25rem;
   font-size: 0.9rem;
   font-weight: 500;
-}
+} */
 .copy-right{
   border-top: 1px solid #2E3545; 
 }
@@ -528,9 +557,9 @@ h1,h3{
   border-radius: 10px;
   object-fit: cover;
 }
-.card-body {
+/* .card-body {
   padding: 1rem 0;
-}
+} */
 .blog-title::after {
   content: "";
   position: absolute;
@@ -553,6 +582,9 @@ h1,h3{
   position: relative;
   overflow: hidden;
 }
+.mb-6{
+  margin-bottom: 32px !important;
+}
 .section-heading{
   max-width: 50%;
     margin: 0 auto ;
@@ -571,7 +603,7 @@ h1,h3{
   border-radius: 6px;
   font-weight: 500;
   font-size: 14px;
-  color: #2B63D9;
+  /* color: #2B63D9; */
 }
 
 .btn-login {
