--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,20 @@ nav{
   border: none !important;         
   box-shadow: none !important;     
 }
+.btn-signup-hover {
+  background-color: transparent;
+  border: none;
+  transition:  0.3s ease;
+  cursor: pointer;
+}
 
+.btn-signup-hover:hover {
+  background-color: var(--color-blue-100); 
+  color: #fff;
+  padding: 12px 18px; 
+  font-weight: 600;
+  border-radius: 0.375rem; 
+}
 .gx-7{
   flex-wrap: nowrap;
   column-gap: 7.5rem;
@@ -81,7 +94,7 @@ nav img{
   margin-right: 4rem; 
 }
 .nav-link {
-  color: #272D37;
+  color: #272D37 !important;
 }
 
 .navbar-nav .nav-item {
@@ -111,6 +124,10 @@ nav img{
     max-width: 300px;
   }
 }
+.stay-wrapper {
+  width: 50%;
+  margin-inline: auto;
+}
 h1,h3{
   color: var(--text-color);
 }
@@ -126,7 +143,9 @@ h1,h3{
   object-fit: cover;
   border-radius: 0.375rem;
 }
-
+.p-6{
+  padding: 12px 18px;
+}
 .px-6{
   padding-left: 4rem;
   padding-right: 4rem;
@@ -308,8 +327,14 @@ h1,h3{
 .side-posts {
   width: 100%;
 }
+.side-posts h2{
+  white-space: nowrap;
+}
 .main-post,.side-posts h2{
   font-size: 1.375rem;
+}
+.gap-24px {
+  gap: 24px;
 }
 
 @media (min-width: 992px) {
@@ -542,20 +567,16 @@ footer .email-input::placeholder {
 /* cards start */
 .blog-title {
   position: relative;
-  /* display: inline-block; */
-  padding-bottom: 1rem;
-  
 }
-.card{
-  border: none !important;       
-  box-shadow: none !important;
-}
+
 .card-img-top {
-  width: 100%;
-  height: auto;
+  
   aspect-ratio: 16 / 10;
   border-radius: 10px;
-  object-fit: cover;
+}
+.py-8 {
+  padding-top: 4.5rem;
+  padding-bottom: 4.5rem;
 }
 /* .card-body {
   padding: 1rem 0;
@@ -573,7 +594,7 @@ footer .email-input::placeholder {
 }
 /* cards end */
 /* carousel start */
-.stay-section {
+/* .stay-section {
   height: 318px;
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -581,7 +602,7 @@ footer .email-input::placeholder {
   align-items: center;
   position: relative;
   overflow: hidden;
-}
+} */
 .mb-6{
   margin-bottom: 32px !important;
 }
@@ -597,21 +618,14 @@ footer .email-input::placeholder {
   margin-top: 1rem;
 }
 
-.btn-signup {
-  border: none;
-  padding: 0.5rem 1.25rem;
-  border-radius: 6px;
-  font-weight: 500;
-  font-size: 14px;
-  /* color: #2B63D9; */
-}
+
 
 .btn-login {
   display: none;
   background-color: #437EF7;
   padding: 0.5rem 1.25rem;
   border-radius: 6px;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 14px;
   color: #ffffff;
 }
